--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "daisyui": "^2.38.1",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
+    "react-animated-text-content": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
